gccida/g1/push_array_bounds
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/push_array_bounds/src/c-typeck.c:5027:6: error: use of undeclared identifier 'spelling_0'; did you mean 'spelling'?
v1 = spelling_0 - spelling_base; 
     ^~~~~~~~~~
     spelling
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/push_array_bounds/src/c-typeck.c:4491:25: note: 'spelling' declared here
static struct spelling *spelling;       /* Next stack element (unused).  */
                        ^
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/push_array_bounds/src/c-typeck.c:5036:1: error: use of undeclared identifier 'spelling_0'; did you mean 'spelling'?
spelling_0 = &spelling_base[( int)v1]; 
^~~~~~~~~~
spelling
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/push_array_bounds/src/c-typeck.c:4491:25: note: 'spelling' declared here
static struct spelling *spelling;       /* Next stack element (unused).  */
                        ^
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/push_array_bounds/src/c-typeck.c:5038:6: error: use of undeclared identifier 'spelling_0'; did you mean 'spelling'?
v3 = spelling_0; 
     ^~~~~~~~~~
     spelling
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/push_array_bounds/src/c-typeck.c:4491:25: note: 'spelling' declared here
static struct spelling *spelling;       /* Next stack element (unused).  */
                        ^
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/push_array_bounds/src/c-typeck.c:5039:1: error: use of undeclared identifier 'spelling_0'; did you mean 'spelling'?
spelling_0->kind = 3; 
^~~~~~~~~~
spelling
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/push_array_bounds/src/c-typeck.c:4491:25: note: 'spelling' declared here
static struct spelling *spelling;       /* Next stack element (unused).  */
                        ^
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/push_array_bounds/src/c-typeck.c:5041:1: error: use of undeclared identifier 'spelling_0'; did you mean 'spelling'?
spelling_0 = v3 + 1; 
^~~~~~~~~~
spelling
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/push_array_bounds/src/c-typeck.c:4491:25: note: 'spelling' declared here
static struct spelling *spelling;       /* Next stack element (unused).  */
                        ^
5 errors generated.
make: *** [/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/push_array_bounds/src/obj/c-typeck.o] Error 1
